2009-07-31  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Record attributes that are placed
	  on property get/set and event add/remove accessors.
	* Test/DocTest-v1.cs: Add attributes to some accessors.
	* Test/en.expected.importslashdoc/Mono.DocTest/Widget.xml,
	  Test/en.expected.since/Mono.DocTest/Widget.xml,
	  Test/en.expected/Mono.DocTest/Widget.xml,
	  Test/html.expected/Mono.DocTest/Widget.html,
	  Test/msxdoc-expected.importslashdoc.xml: Flush.

2009-06-23  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Don't generate an exception when an
	  enumeration contains multiple names with the same value.
	  Fixes #515030.
	* Test/DocTest-v1.cs: Add test for #515030.
	* Test/en.expected/Mono.DocTest/Color.xml,
	  Test/en.expected.since/Mono.DocTest/Color.xml,
	  Test/html.expected/Mono.DocTest/Color.html,
	  Test/msxdoc-expected.importslashdoc.xml,
	  Test/en.expected.importslashdoc/Mono.DocTest/Color.xml: Flush.

2009-04-18  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/webdoc.cs: Change -o semantics to be a directory
	  prefix, e.g. `mdoc export-html-webdoc -o cache.new foo.tree` will
	  output files into `cache.new/foo` instead of directly into
	  `cache.new`.  This makes it easier to specify more than one
	  .tree/.zip file on the command line.

2009-04-16  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocs2slashdoc.cs: Code refactor; use
	  EcmaDoc.GetCref() to generate //member/@name values.
	* Mono.Documentation/dump.cs: Add -f=FORMAT support, so that we can
	  load an appropriate HelpSource (if supplied) so that an appropriate
	  Node.PublicUrl can be displayed in the output.

2009-04-15  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/webdoc.cs: Remove console debug spew.  If you run
	  with `mdoc -v`, each URL will be printed as it's processed.

2009-04-15  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/webdoc.cs: When extracting files from the .zip