@@ -1,3 +1,10 @@
+2009-08-02  Jonathan Pryor <jpryor@novell.com>
+
+	* Mono.Documentation/monodocer.cs: Sometimes <AssemblyVersion/> is
+	  found twice when it's actually present only once (!).  Attempt to
+	  work around this by usinq LINQ instead of a foreach (which oddly
+	  works...).
+
 2009-07-31  Jonathan Pryor <jpryor@novell.com>
 
 	* Mono.Documentation/monodocer.cs: Record attributes that are placed
